inc/engine.h

#define range(var,start,end,step) for (uint32_t var=start;var<end;var+=step)
typedef void(*fptr)(void*);
typedef uint32_t index_t;
typedef _Bool bool;
typedef struct
{
	dSpaceID space;
	sPhysicsContact *contacts;
	index_t contactsCount;
	index_t contactsAllocated;
} sPhysicsCS;
typedef struct
{
	dSpaceID space;
	sPhysicsContact *contacts;
	index_t contactsCount;
	index_t contactsAllocated;
	dReal angle;
	dReal range;
	sRayDir dir;
	dGeomID radar_mesh;
} sPhysicsRS;
//shader.c
typedef struct
{
	char name[256];
	GLchar* fragment_source;
	GLchar* vertex_source;
	GLsizei log_len;
	GLsizei frag_source_len;
	GLsizei vert_source_len;
	GLint success;
	GLuint compute;
	GLuint fragment;
	GLuint vertex;
	GLuint program;
	GLuint log;
	FILE* fp;
} sShader;
//mesh.c
typedef struct
{
	float r,g,b,a;
} sColour;
typedef struct
{
	uint32_t hash;
	char name[256];
	uint16_t width;
	uint16_t height;
	void* data;
	uint32_t type;
	GLuint ID;
} sTexture;
typedef struct
{
	uint32_t hash;
	char name[256];
	dReal friction;
	float transparency;
	_Bool glass;
	float height_scale;
	sColour diffuse;
	sColour specular;
	sTexture* diffuse_texture;
	sTexture* specular_texture;
	sTexture* height_texture;
	sTexture* lightmap_texture;
	sTexture* reflection_cubemap;
	float tdx;
	float tdy;
	float glow;
	float wet;
	GLuint shader;
} sMaterial;
typedef struct
{
	float vx,vy,vz;
	float nx,ny,nz;
	float u,v;
	float bx,by,bz;
	float tx,ty,tz;
} sVertex;
typedef struct
{
	uint32_t hash;
	char name[256];
	laType* link_matrix;
	sVertex* vertices;
	index_t* indices;
	uint32_t ind_count;
	uint32_t vert_count;
	sMaterial* material;
	GLuint VBO;
	GLuint IBO;
	GLuint uniforms[4];
	laType transform;
	laType bounding_box;
	uint16_t bones_indices[128];
	_Bool deformed;
	_Bool uv2;
	void* owner;
} sMesh;
typedef struct
{
	char name[256];
	index_t channels_count;
	float time;
	float time_begin;
	float time_end;
	float time_increment;
	ACTION_TYPE type;
	ACTION_TYPE blend_type;
	sActionChannel* channels;
	int* bones_matching;
} sAction;
// Skeletal actions //
typedef struct
{
	OBJECT_TEMPLATE;
	void* skeleton;
	sMesh* mesh;
	int animated;
	float length;
	int physicsID;
	int physicsType;
} sBone;
typedef struct
{
	OBJECT_TEMPLATE;
	index_t bone_count;
	sAction action[MAX_ACTION_LAYERS];
	float action_weights[MAX_ACTION_LAYERS];
	laType* pose;
	sBone* bones;
} sSkeleton;
// Задаёт скелету анимацию по её имени
void sSkeletonSetAction(sSkeleton*,uint8_t layer,char*);
// Задаёт параметры (способ воспроизведения, начальный и конечный кадры и скорость)
// sActionSetParam(скелет, слой, тип_воспроизведения, начальный_кадр, конечный_кадр, скорость)
void sActionSetParam(sSkeleton* skeleton, uint8_t layer, int32_t act_type, float start, float stop, float speed);
// Задаёт анимацию и её слой, способ воспроизведения, интервал и скорость.
void sSkeletonSetPlayAction(sSkeleton* skel,char* name,uint8_t layer, uint32_t act_type, float start, float stop, float speed);
// Проверяет, воспроизводится ли на заданном слое анимация
// sActionStop(скелет, слой)
uint8_t sActionIsPlaying(sSkeleton* skeleton,uint8_t layer);
// Останавливает анимацию, воспроизводящуюся на заданном слое
// sActionStop(скелет, слой)
void sActionStop(sSkeleton* skeleton,uint8_t layer);
// Возвращает индекс ксти скелета
sBone* sSkeletonGetBoneByIndex(sSkeleton* skeleton,uint16_t ind);
// Возвращает количество костей скелета
uint16_t sSkeletonGetBoneCount(sSkeleton* skeleton);
// Возвращает фазу анимации
float sSkeletonGetActionFrame2(sSkeleton* skel, uint8_t layer);
void sSkeletonSetActionInterval(sSkeleton* skeleton, uint8_t layer, float a, float b);
void sSkeletonResetPose(sSkeleton* skeleton);
void sSkeletonAddPoseFromLayerToPose(sSkeleton* skeleton, uint8_t layer, float time, float weight);
void sSkeletonMixPoseFromLayerWithPose(sSkeleton* skeleton, uint8_t layer, float time, float weight);
void sSkeletonAddPoseFromActionToPose(sSkeleton* skeleton, char* name, uint32_t keyframe, float time, float weight);
void sSkeletonMixPoseFromActionWithPose(sSkeleton* skeleton, char* name, uint32_t keyframe, float time, float weight);
///////////////////////

typedef struct
{
	OBJECT_TEMPLATE;
	sSkeleton* skeleton;
	sMesh* mesh;
	dBodyID body;
	dBodyID bodyIgnoring;
	dGeomID geom;
	sPhysicsRS radar;\
	sPhysicsRS ray;\
	sPhysicsCS collider;
	int ghost;
	int physics_enabled;
	//dGeomID rays[6];
	uint32_t physicsType;
	uint32_t physicsShape;
	uint32_t collisionGroups;
	uint32_t collideWithGroups;
	dReal physicsFriction;
	dReal physicsMass;
	dReal averangeVel;
} sObject;
typedef struct
{
	OBJECT_TEMPLATE;
	CAMERA_TEMPLATE;
} sCamera;
typedef struct
{
	OBJECT_TEMPLATE;
	CAMERA_TEMPLATE;
	uint8_t type;
	sColour color;
	float inner,outer;
	bool shadow;
} sLight;
void sObjectMoveGlobal3fv(void* obj,laType vector);
void sObjectSetPositionGlobal3fv(void* obj,laType vector);
void sObjectSetLocalTransform(void* obj,laType transform);
void sObjectMoveLocal3fv(void* obj,laType vector);
void sObjectRotateLocal3f(void* object,float x,float y,float z);
void sObjectRotateGlobal3f(void* object,float x,float y,float z);
void sObjectSetRotation3f(void* object,float x,float y,float z);
laType sObjectGetVectorTo(void* object,void* object_to);
float sObjectGetDistanceTo(void* object,void* object_to);
//void sObjectSnapToOther(void* object,void* other);

void sObjectPlaceChildren(sObject* object);
sObject* sObjectGetChildren(sObject* object,uint32_t ind);
sObject* sObjectGetParent(sObject* object);
void sObjectSetParent(void* obj,void* parent,_Bool apply_transform);
void sObjectDelParent(void* obj);
void sObjectRemoveParent(void* obj);
void sObjectDelDuplicate(void*);
typedef union
{
	sObject object;
	sLight light;
	sCamera camera;
	sSkeleton skeleton;
	sBone bone;
} GameObject;
//scene.c
typedef struct
{
	void (*behaviour)(void*);
	sCamera camera;

	sMesh* meshes;
	sMaterial* materials;
	sTexture* textures;
	sTexture* cubemap;
	sLight** lights;
	sObject** objects;
	sSkeleton** skeletons;
	sLight* lights_inactive;
	sObject* objects_inactive;
	sSkeleton* skelets_inactive;
	sAction* actions;

	GameObject** gobjects;
	index_t gobjects_count;
	index_t gobjects_unique_counter;

	sShader *shader_list[8];

	index_t mesh_count;
	index_t material_count;
	index_t texture_count;
	index_t lights_count;
	index_t objects_count;
	index_t skeletons_count;
	uint32_t lights_inactive_count;
	index_t objects_inactive_count;
	index_t skelets_inactive_count;
	index_t actions_count;
	dWorldID world;
	dSpaceID space;
	dJointGroupID contactgroup;
	dJointGroupID joints;
} sScene;
//////////

//physics.c

void sPhysicsApplyForceAtPointGlobal3fv(sObject* obj,laType pos,laType vec);
void sPhysicsApplyImpulseAtPointGlobal3fv(sObject* obj,laType pos,laType vec);
void sPhysicsApplyHitAtPointGlobal3fv(sObject* obj,laType pos,laType vec,float mass);
void sPhysicsCSInit(sObject* object);
void sPhysicsRSInit(sObject* object,float range);
void sPhysicsRadSInit(sObject* object,float range,float angle);
index_t sPhysicsRadSGetHitObjectCount(sObject* obj);
sObject* sPhysicsRadSGetHitObject(sObject* obj,index_t ind);
index_t sPhysicsRSGetHitObjectCount(sObject* obj);
sObject* sPhysicsRSGetHitObject(sObject* obj,index_t ind);
void sObjectSetBehaviour(sObject* object, fptr func);
void sObjectSetMesh(sObject* object,sMesh* mesh);
void sObjectSetMeshByName(sObject* object,char* mesh);
void sObjectTrackToOther(sObject* obj1,sObject* obj2,uint8_t look_axis,uint8_t up_axis);
void sObjectTrackToPoint(sObject* obj1,laType point,uint8_t look_axis,uint8_t up_axis);