siberian_ctypes.py


    def getActionFrame2(self, layer: int) -> float:
        if self._name[0] == ord('s') or self._name[0] == b's':
            return float(sSkeletonGetActionFrame2(self, layer))
        else:
            raise AttributeError(
                sObject._types[chr(self._name[0])] + ' has no attribute getActionFrame2')

    def resetPose(self):
        if self._name[0] == ord('s') or self._name[0] == b's':
            sSkeletonResetPose(self)
        else:
            print(self._name)
            raise AttributeError(
                sObject._types[chr(self._name[0])] + ' has no attribute resetPose')

    def addPoseFromLayerToPose(self, layer: int, time: float, weight=1.0):
        if self._name[0] == ord('s') or self._name[0] == b's':
            sSkeletonAddPoseFromLayerToPose(self, layer, time, weight)
        else:
            raise AttributeError(sObject._types[chr(
                self._name[0])] + ' has no attribute addPoseFromLayerToPose')

    def mixPoseFromLayerWithPose(self, layer: int, time: float, weight=1.0):
        if self._name[0] == ord('s') or self._name[0] == b's':
            sSkeletonMixPoseFromLayerWithPose(self, layer, time, weight)
        else:
            raise AttributeError(sObject._types[chr(
                self._name[0])] + ' has no attribute addPoseFromLayerToPose')

    def addPoseFromActionToPose(self, name, keyframe:int=0, time:float=0.0, weight:float=1.0):
        if self._name[0] == ord('s') or self._name[0] == b's':
            name = str2c_char_p(name)
            sSkeletonAddPoseFromActionToPose(
                self, name, keyframe, time, weight)
        else:
            raise AttributeError(sObject._types[chr(
                self._name[0])] + ' has no attribute addPoseFromActionToPose')

    def mixPoseFromActionWithPose(self, name, keyframe:int=0, time:float=0.0, weight:float=1.0):
        if self._name[0] == ord('s') or self._name[0] == b's':
            name = str2c_char_p(name)
            sSkeletonMixPoseFromActionWithPose(
                self, name, keyframe, time, weight)
        else:
            raise AttributeError(sObject._types[chr(
                self._name[0])] + ' has no attribute mixPoseFromActionWithPose')

    @property
    def ghost(self) -> bool:
        return getattr(self, '__ghost')

    @ghost.setter
    def ghost(self, val) -> bool:
        setattr(self, '__ghost', val)

    @property
    def scene(self) -> sScene:
        return cast(self._scene, POINTER(sScene)).contents

    @property
    def color(self) -> sColour:
        return cast(pointer(self), POINTER(sLight)).contents.color

    @property
    def bones(self) -> Dict[str, sObject]:
        if self._name[0] == ord('s') or self._name[0] == b's':
            res = {}
            for i in range(sSkeletonGetBoneCount(pointer(self))):
                bone = sSkeletonGetBoneByIndex(pointer(self), i).contents
                res[bone.name] = bone
            return res
        else:
            raise AttributeError(
                sObject._types[chr(self._name[0])] + ' has no attribute bones')

    @property
    def setActionInterval(self, layer: int, start: float, stop: float):
        if self._name[0] == ord('s') or self._name[0] == b's':
            _siberian.sSkeletonSetActionInterval(self, layer, start, stop)
        else:
            raise AttributeError(
                sObject._types[chr(self._name[0])] + ' has no attribute setActionInterval')

    def setActionParam(self, layer: int, play_type: int, start: float, stop: float, speed: float):
        if self._name[0] == ord('s') or self._name[0] == b's':
            _siberian.sActionSetParam(self, layer, play_type, start, stop, speed)
        else:
            raise AttributeError(
                sObject._types[chr(self._name[0])] + ' has no attribute setActionParam')

    def playAction(self, name: str, layer: int, act_type: int, start_frame: float, stop_frame: float, speed: float):
        if self._name[0] == ord('s') or self._name[0] == b's':
            if isinstance(name, str):
                name = name.encode()
            elif isinstance(name, bytes):
                pass
            else:
                raise TypeError("name argument of sObject.playAction must be a string or bytes")
            _siberian.sSkeletonSetPlayAction(self, name, layer, act_type, start_frame, stop_frame, speed)
        else:
            raise AttributeError(
                sObject._types[chr(self._name[0])] + ' has no attribute playAction')

    def playActionInTime(self, name: str, layer: int, act_type: int, start_frame: float, end_frame: float, act_time: float):
        dist = abs(end_frame-start_frame)
        speed = dist / act_time
        framerate = speed * 0.0333333
        self.playAction(name, layer, act_type,
                        start_frame, end_frame, framerate)

    def setActionParamInTime(self, layer: int, act_type: float, start_frame: float, end_frame: float, act_time: float):
        dist = abs(end_frame-start_frame)
        speed = float(dist) / act_time
        framerate = speed * 0.0333333
        self.setActionParam(layer, act_type, start_frame, end_frame, framerate)

    def setAction(self, layer: int, name: str):
        if self._name[0] == ord('s') or self._name[0] == b's':
            if isinstance(name, str):
                name = name.encode()
            elif not isinstance(name, bytes):
                raise TypeError("name attribute of sObject.setAction must be a string or byte array")
            _siberian.sSkeletonSetAction(self, layer, name)
        else:
            raise AttributeError(
                sObject._types[self._name[0]] + ' has no attribute setAction')

    @property
    def isPlayingAction(self) -> bool:
        if self._name[0] == ord('s') or self._name[0] == b's':
            return lambda *args: sActionIsPlaying(self, *args)
        else:
            raise AttributeError(
                sObject._types[self._name[0]] + ' has no attribute isPLayingAction')

    @property
    def stopAction(self):
        if self._name[0] == ord('s') or self._name[0] == b's':
            return lambda layer: sActionStop(pointer(self), layer)
        else:
            raise AttributeError(
                sObject._types[self._name[0]] + ' has no attribute setAction')

    def attachSound(self, name):
        if isinstance(name, str):
            name = name.encode()
        elif not isinstance(name, str):
            raise TypeError("name attribute of sObject.attachSound must be a string or byte array")
        _siberian.sSoundAttachToObject(pointer(self), name)

#def _cast_to_sobject_p(obj):
#    return cast(obj, sObject_p)

#def Object(obj):
#    return cast(pointer(obj), sObject_p).contents

#def sSkeletonCast(obj):
#    return cast(pointer(obj), POINTER(sSkeleton)).contents

def convert_python_to_c(func):
    def Foo(obj):
        var = cast(obj, sObject_p)
        func(var.contents)
        return None
    return behaviour(Foo)
    # return behaviour(lambda obj : func(_cast_to_sobject_p(obj).contents))


_functions = {}


def executeAll(arg):
    INTP = sObject_p
    keys = list(_functions.keys())
    i = 0
    while i < len(list(_functions.keys())):
        key = list(_functions.keys())[i]
        try:
            _functions[key](cast(key, INTP).contents)
        except Exception:
            exc_info = sys.exc_info()
            print("Python exception:")
            print("".join(traceback.format_exception(*exc_info)))
        i += 1
    return 0


def sEngineClearScripts():
    global _functions
    _functions = {}

# def sSkeletonCast(obj):

sObject_p = POINTER(sObject)
sMeshNull = cast(0, POINTER(sMesh))

_siberian.sObjectPlaceChildren.argtypes = (sObject_p,)
_siberian.sObjectPlaceChildren.restype = None

_siberian.sObjectSetBehaviour.argtypes = (sObject_p, behaviour)

sObjectSetMeshPtr = _siberian.sObjectSetMesh
sObjectSetMeshPtr.argtypes = (sObject_p, POINTER(sMesh))

_siberian.sObjectSetMeshByName.argtypes = (sObject_p, c_char_p)

def sObjectSetMeshByName(ptr, name): return _siberian.sObjectSetMeshByName(
    ptr, name.encode() if type(name) == str else name)

sObjectEnd = _siberian.sObjectDelDuplicate
sObjectEnd.argtypes = (sObject_p,)
sObjectEnd.restype = None

sObjectSetPositionGlobal3fv = _siberian.sObjectSetPositionGlobal3fv
sObjectSetPositionGlobal3fv.argtypes = (sObject_p, laType)
sObjectSetPositionGlobal3fv.restype = None

_siberian.sObjectSetLocalTransform.argtypes = (sObject_p, laType)
_siberian.sObjectSetLocalTransform.restype = None

sObjectGetPositionGlobal3fv = _siberian.sObjectGetPositionGlobal3fv
sObjectGetPositionGlobal3fv.argtypes = (sObject_p,)
sObjectGetPositionGlobal3fv.restype = laType

sObjectRotateLocal3f = _siberian.sObjectRotateLocal3f
sObjectRotateLocal3f.argtypes = (sObject_p, c_float, c_float, c_float)

sObjectRotateGlobal3f = _siberian.sObjectRotateGlobal3f
sObjectRotateGlobal3f.argtypes = (sObject_p, c_float, c_float, c_float)

sObjectMoveGlobal3fv = _siberian.sObjectMoveGlobal3fv
sObjectMoveGlobal3fv.argtypes = (sObject_p, laType)

sObjectMoveLocal3fv = _siberian.sObjectMoveLocal3fv
sObjectMoveLocal3fv.argtypes = (sObject_p, laType)

sObjectSetRotation3f = _siberian.sObjectSetRotation3f
sObjectSetRotation3f.argtypes = (sObject_p, c_float, c_float, c_float)
sObjectSetRotation3f.restype = None

sObjectGetParent = _siberian.sObjectGetParent
sObjectGetParent.restype = sObject_p

sObjectGetDistanceTo = _siberian.sObjectGetDistanceTo
sObjectGetDistanceTo.argtypes = (sObject_p, sObject_p)
sObjectGetDistanceTo.restype = c_float

sObjectGetVectorTo = _siberian.sObjectGetVectorTo
sObjectGetVectorTo.argtypes = (sObject_p, sObject_p)
sObjectGetVectorTo.restype = laType

_siberian.sObjectRemoveParent
_siberian.sObjectRemoveParent.argtypes = (sObject_p,)
_siberian.sObjectRemoveParent.restype = None

sObjectDelParent = _siberian.sObjectDelParent
sObjectDelParent.argtypes = (sObject_p,)
sObjectDelParent.restype = None

sObjectGetChildren = _siberian.sObjectGetChildren
sObjectGetChildren.argtypes = (sObject_p, uint32_t)
sObjectGetChildren.restype = sObject_p

sObjectTrackToOther = _siberian.sObjectTrackToOther
sObjectTrackToOther.argtypes = (
    sObject_p, sObject_p, uint8_t, uint8_t)

sObjectTrackToPoint = _siberian.sObjectTrackToPoint
sObjectTrackToPoint.argtypes = (sObject_p, laType, uint8_t, uint8_t)

sObjectSetParent = _siberian.sObjectSetParent
sObjectSetParent.argtypes = (sObject_p, sObject_p, c_bool)

sPhysicsApplyForceAtPointGlobal3fv = _siberian.sPhysicsApplyForceAtPointGlobal3fv
sPhysicsApplyForceAtPointGlobal3fv.argtypes = (
    sObject_p, laType, laType)

sPhysicsApplyImpulseAtPointGlobal3fv = _siberian.sPhysicsApplyImpulseAtPointGlobal3fv
sPhysicsApplyImpulseAtPointGlobal3fv.argtypes = (
    sObject_p, laType, laType)

sPhysicsApplyHitAtPointGlobal3fv = _siberian.sPhysicsApplyHitAtPointGlobal3fv
sPhysicsApplyHitAtPointGlobal3fv.argtypes = (
    sObject_p, laType, laType, c_float)

sPhysicsCSInit = _siberian.sPhysicsCSInit
sPhysicsCSInit.argtypes = (sObject_p,)

sPhysicsRSInit = _siberian.sPhysicsRSInit
sPhysicsRSInit.argtypes = (sObject_p, c_float)

sPhysicsRadSInit = _siberian.sPhysicsRadSInit
sPhysicsRadSInit.argtypes = (sObject_p, c_float, c_float)

sPhysicsRadSGetHitObject = _siberian.sPhysicsRadSGetHitObject
sPhysicsRadSGetHitObject.argtypes = (sObject_p, uint32_t)
sPhysicsRadSGetHitObject.restype = sObject_p

sPhysicsRadSGetHitObjectCount = _siberian.sPhysicsRadSGetHitObjectCount
sPhysicsRadSGetHitObjectCount.argtypes = (sObject_p,)
sPhysicsRadSGetHitObjectCount.restype = uint32_t

sPhysicsRSGetHitObject = _siberian.sPhysicsRSGetHitObject
sPhysicsRSGetHitObject.argtypes = (sObject_p, uint32_t)
sPhysicsRSGetHitObject.restype = sObject_p

sPhysicsRSGetHitObjectCount = _siberian.sPhysicsRSGetHitObjectCount
sPhysicsRSGetHitObjectCount.argtypes = (sObject_p,)
sPhysicsRSGetHitObjectCount.restype = uint32_t
